# domain-check

./: .domain-check.toml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  RustAppStructure.txt  SECURITY.md  deny.toml  release.toml
.github/workflows/: ci.yml  release.yml  security.yml
docs/: AUTOMATION.md  CLI.md  EXAMPLES.md  FAQ.md  README.md
domain-check/: Cargo.toml
domain-check-lib/: Cargo.toml  README.md  release.toml
domain-check-lib/src/: checker.rs  concurrent.rs  config.rs  error.rs  generate.rs  lib.rs  types.rs  utils.rs
domain-check-lib/src/protocols/: mod.rs  rdap.rs  registry.rs  whois.rs
domain-check-lib/tests/: integration.rs
domain-check-mcp/: Cargo.toml  README.md  server.json  smithery.yaml
domain-check-mcp/src/: main.rs  tools.rs
domain-check/src/: main.rs  main.rs.old  ui.rs
domain-check/tests/: cli_integration.rs  performance.rs
scripts/: record-demo.sh
src/: main.rs
