[package]
name = "domain-check"
version = "0.3.0"
edition = "2024"
authors = ["Sai Dutt G.V gvs46@protonmail.com"]
description = "A fast CLI to check domain availability via RDAP/WHOIS"
license = "MIT"
repository = "https://github.com/saidutt46/domain-check"
keywords = ["cli", "domain", "whois", "rdap", "availability"]
categories = ["command-line-utilities", "network-programming"]
readme = "README.md"

exclude = [".DS_Store", "target/**/.DS_Store"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
console = "0.15"
crossterm = "0.27"
tui = { version = "0.19", default-features = false, features = ['crossterm'] }