[package]
name = "domain-check-mcp"
description = "MCP server for domain availability checking"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
keywords = ["mcp", "mcp-server", "domain", "ai", "llm"]
categories = ["command-line-utilities"]

[[bin]]
name = "domain-check-mcp"
path = "src/main.rs"

[dependencies]
domain-check-lib = { path = "../domain-check-lib", version = "1.0.1" }
rmcp = { version = "0.16", features = ["server", "macros", "transport-io"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
rmcp = { version = "0.16", features = ["client", "server", "macros", "transport-io"] }
